# jfsrec

./: AUTHORS  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  configure.in
autom4te.cache/: output.0  requests  traces.0
src/: Makefile.am  Makefile.in  device.cpp  device.h  dirinode.cpp  dirinode.h  fileinode.cpp  fileinode.h  inode.cpp  inode.h  inodefactory.cpp  inodefactory.h  inodescanner.cpp  inodescanner.h  inodevector.cpp  inodevector.h  inodevector.ho  jfs_types.h  jfsrec.cpp  jfsrec_rm_logged_inode  options.cpp  options.h  recoverer.cpp  recoverer.h  specialinode.cpp  specialinode.h  symlinkinode.cpp  symlinkinode.h  unallocatedinode.cpp  unallocatedinode.h  unicode_to_utf8.cpp  unicode_to_utf8.h
